Fix button overflow

--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,9 @@ text {
 
 @media only screen and (max-width: 475px) {
 	.submitAnswer {
-		width: 200px;
+		width: 70%;
+	}
+	.allocation {
+		resize: none;
 	}
 }
